--- a/_posts/2015-03-01-jardim.md
+++ b/_posts/2015-03-01-jardim.md
@@ -8,7 +8,9 @@ header:
 image:
     thumb:  dsc03887-300x195.jpg
     homepage: dsc03887-300x195.jpg
-comments: true
+comments: yes
+tags:
+    - turismo
 show_meta: false
 ---
 O jardim botânico em Jundiaí é um dos parques com visual mais bonito e elaborado de nossa cidade.
@@ -24,3 +26,8 @@ Não é um parque de muito movimento, mas encanta pelas paisagens, jardins temá
 **O horário de visitação do Jardim Botânico é das 8 às 18 horas.**
 **Endereço: Av. Vereador Geraldo Dias com Marginal Direita do Rio Jundiaí**
 **Telefone: (11) 4589-8534 ou 4582-3582**
+
+### Turismo
+{: .t60 }
+
+{% include list-posts.html tag='turismo' %}
