--- a/_posts/2015-03-02-teatro.md
+++ b/_posts/2015-03-02-teatro.md
@@ -4,6 +4,9 @@ show_meta: false
 subheadline: "Turismo"
 title: "Teatro Polytheama"
 teaser: "O Teatro Polytheama está no seleto grupo composto por apenas seis teatros centenários no Brasil, sendo que é o único localizado em uma cidade do interior."
+comments: yes
+tags:
+    - turismo
 iframe: "<iframe width='970' height='546' src='//www.youtube.com/embed/RRfH_bo7M4c' frameborder='0' allowfullscreen></iframe>"
 ---
 
@@ -33,3 +36,8 @@ Atualmente o Teatro Polytheama também está protegido na esfera estadual, que p
 
 **Rua Barão de Jundiaí, 160 – Centro**
 **Tel.: 11 4586-2472**
+
+### Turismo
+{: .t60 }
+
+{% include list-posts.html tag='turismo' %}
